<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="331dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/surface_container_high"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/login_title"
        android:textColor="@color/on_surface"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="299dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_name"
            style="?attr/textInputFilledStyle"
            android:layout_width="299dp"
            android:layout_height="59dp"
            app:boxBackgroundColor="@color/surface_container_highest"
            android:fontFamily="@font/roboto"
            android:hint="@string/login_name">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto"
                android:text="Ivan Petrov" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="?attr/textInputFilledStyle"
            android:layout_width="299dp"
            android:layout_height="59dp"
            android:layout_marginTop="24dp"
            app:boxBackgroundColor="@color/surface_container_highest"
            android:fontFamily="@font/roboto"
            android:hint="@string/password_name"
            app:endIconDrawable="@drawable/sun"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto"
                android:inputType="textPassword"
                android:text="Ivan Petrov" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="149dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:layout_gravity="end"
            android:fontFamily="@font/roboto"
            android:text="@string/reset_button"
            android:textAllCaps="false"
            android:textColor="@color/primary"
            android:textSize="11sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="299dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="end"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <Button
            style="@style/Widget.Material3.Button.IconButton.Outlined"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:padding="0dp"
            android:text="@string/login_button"
            android:textSize="11sp" />

        <Button
            style="@style/Widget.Material3.Button.IconButton.Outlined"
            android:layout_width="92dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:padding="0dp"
            android:text="@string/cancel_button"
            android:textSize="11sp" />
    </LinearLayout>


</LinearLayout>