<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="105dp"
    android:paddingStart="16dp"
    android:paddingTop="12dp"
    android:paddingEnd="16dp"
    android:paddingBottom="12dp">

    <ImageView
        android:id="@+id/cart_item_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="222dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cart_item_image"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/cart_item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/on_surface"
            android:textSize="22sp"
            android:text="@string/cart_title" />

        <TextView
            android:id="@+id/cart_item_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/cart_category" />

        <TextView
            android:id="@+id/cart_item_description"
            android:layout_width="wrap_content"
            android:ellipsize="end"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:maxLines="1"
            android:text="@string/cart_description" />
    </LinearLayout>

    <TextView
        android:id="@+id/cart_item_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="$35"
        android:textColor="@color/tertiary"
        android:textAlignment="center"
        android:fontFamily="@font/roboto"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>