<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/surface"
    android:orientation="vertical"
    tools:context=".ContactsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/contacts_toolbar"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            app:menu="@menu/menu_contacts"
            app:navigationIcon="@drawable/arrow"
            app:title="@string/menu_contacts" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_name"
                style="?attr/textInputFilledStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/roboto"
                android:hint="@string/contract_name"
                app:boxBackgroundColor="@color/surface_container_highest"
                app:endIconDrawable="@drawable/man"
                app:endIconMode="custom">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto"
                    android:inputType="text"
                    android:text="Ivan Petrov" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout"
                    style="@style/Widget.Material3.TextInputLayout.FilledBox"
                    android:layout_width="213dp"
                    android:layout_height="56dp"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/contract_phone"
                    app:boxBackgroundColor="@color/surface_container_highest"
                    app:endIconDrawable="@drawable/phone"
                    app:endIconMode="custom"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/roboto"
                        android:inputType="phone"
                        android:text="+1(234)567-8900" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
                    android:layout_width="160dp"
                    android:layout_height="56dp"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/contract_phone"
                    app:boxBackgroundColor="@color/surface_container_highest"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <AutoCompleteTextView
                        android:id="@+id/autoCompleteTextView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:inputType="none"
                        android:text="Mobile" />
                </com.google.android.material.textfield.TextInputLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/address"
                style="?attr/textInputFilledStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/roboto"
                android:hint="@string/contract_address"
                app:boxBackgroundColor="@color/surface_container_highest"
                app:endIconDrawable="@drawable/flag"
                app:endIconMode="custom">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto"
                    android:inputType="text"
                    android:text="123, Lenin street, Apt.6" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/city"
                    style="@style/Widget.Material3.TextInputLayout.FilledBox"
                    android:layout_width="186dp"
                    android:layout_height="56dp"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/contract_city"
                    app:boxBackgroundColor="@color/surface_container_highest"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/roboto"
                        android:inputType="text"
                        android:text="Tokyo" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/country"
                    style="?attr/textInputFilledStyle"
                    android:layout_width="186dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/contract_country"
                    app:boxBackgroundColor="@color/surface_container_highest"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/roboto"
                        android:inputType="text"
                        android:text="Australia" />

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/date"
                style="?attr/textInputFilledStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/roboto"
                android:hint="@string/contract_date"
                app:boxBackgroundColor="@color/surface_container_highest"
                app:endIconDrawable="@drawable/calendar"
                app:endIconMode="custom">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto"
                    android:inputType="text"
                    android:text="Birthday" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/notes"
                style="?attr/textInputFilledStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/roboto"
                android:hint="@string/contract_notes"
                app:boxBackgroundColor="@color/surface_container_highest"
                app:endIconDrawable="@drawable/microphone"
                app:endIconMode="custom">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto"
                    android:inputType="text"
                    android:text="Loves burgers and french fries" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/contacts_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary"
        android:text="@string/contract_save" />

</LinearLayout>